unpackaged/main/default/objects/AcctSeed__GL_Account_Reporting_Group_Line__c/AcctSeed__GL_Account_Reporting_Group_Line__c.object-meta.xml
<CustomObject>
    <description>Used to document the association a GL account has with a Gl account reporting group.</description>
    <label>GL Account Reporting Group Line</label>
    <nameField>
        <displayFormat>GLRAG-{0000}</displayFormat>
        <label>GL Account Reporting Group Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Account Reporting Group Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>