unpackaged/main/default/objects/AcctSeed__GL_Account_Reporting_Group_Line__c/fields/AcctSeed__GL_Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account</label>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>GL Account Reporting Group Lines</relationshipLabel>
    <relationshipName>GL_Account_Reporting_Group_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>